tests/NormalTests/paczka1/small_fuzzy/96844764.err
Error in line 2: o19KAvvnMvW S90 10,3
Error in line 3: o19KAvvnMvW S871 90,8
Error in line 10: o19KAvvnMvW S90 36,6
